styles.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Barlow Semi Condensed', sans-serif;
  font-size: 13px;
}

/* UTILITY CLASSES */
.moderate-violet {
  background-color: hsl(263, 55%, 52%) !important;
}

.bg-pattern-quotation {
  background: url('./images/bg-pattern-quotation.svg') top right 25% no-repeat;
}

.very-dark-grayish-blue {
  background-color: hsl(217, 19%, 35%) !important;
}

.very-dark-blackish-blue {
  background-color: hsl(219, 29%, 14%) !important;
}

.testimonials-grid-section {
  background-color: hsl(210, 46%, 95%);
}

.white {
  background-color: hsl(0, 0%, 100%) !important;
  color: hsl(217, 19%, 35%) !important;
}

.col-1 {
  grid-column: 1 / span 2;
}
.col-2 {
  grid-column: 3 / span 1;
}
.col-3 {
  grid-column: 1 / span 1;
}
.col-4 {
  grid-column: 2 / span 2;
}
.col-5 {
  grid-column: 4 / span 1;
  grid-row: 1 / span 2;
}

/* MAIN STYLES */
.testimonials-grid-section {
  background-color: hsl(210, 46%, 95%);
}

.grid-container {
  max-width: 1440px;
  margin: 96px auto;
  padding: 12px;

  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 24px;
}

.testimonial {
  color: hsl(0, 0%, 100%);
  padding: 24px;
  border-radius: 11px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);

  display: flex;
  flex-direction: column;
  gap: 16px;
}

.testimonial-profile {
  display: flex;
  align-items: center;
}

.testimonial-profile img {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: 2px solid hsl(0, 0%, 50%);
  margin-right: 12px;
}

.testimonial-name span {
  color: hsl(0, 0%, 50%);
  font-size: 12px;
}

.testimonal-text {
  font-size: 18px;
}

.testimonal-text--sub {
  color: hsl(0, 0%, 70%);
}

/* ****************************** */
/* MOBILE */

@media (max-width: 800px) {
  .grid-container {
    max-width: 375px;
    margin: 0 auto;
    padding: 24px;
    grid-template-columns: 1fr;
    gap: 24px;
  }

  .testimonial {
    padding: 24px 30px;
  }

  .col-1,
  .col-2,
  .col-3,
  .col-4,
  .col-5 {
    grid-column: 1 / -1;
  }
}

